--- a/firebase.json
+++ b/firebase.json
@@ -3,18 +3,18 @@
     "platforms": {
       "android": {
         "default": {
-          "projectId": "finalproject-34930",
-          "appId": "1:674327372383:android:f0bc10a8587cbcda5ff1ea",
+          "projectId": "",
+          "appId": "",
           "fileOutput": "android/app/google-services.json"
         }
       },
       "dart": {
         "lib/firebase_options.dart": {
-          "projectId": "finalproject-34930",
+          "projectId": "",
           "configurations": {
-            "android": "1:674327372383:android:f0bc10a8587cbcda5ff1ea",
-            "ios": "1:674327372383:ios:747d859e73d122bb5ff1ea",
-            "web": "1:674327372383:web:0d89943415e8678b5ff1ea"
+            "android": "",
+            "ios": "",
+            "web": ""
           }
         }
       }
